--- a/Missions_to_Mars/App/templates/index.html
+++ b/Missions_to_Mars/App/templates/index.html
@@ -29,10 +29,10 @@
         </div>
       </div>
     </div>
+
+    <!-- Featured Mars Image -->
     <div class="container">
       <div class="row">
-
-        <!-- Featured Mars Image -->
         <div class="col-lg-8 col-md-8 col-sm-12">
           <h2>Featured Mars Image</h2>
           <img src="{{featured_image_url}}" style="max-width:100%; max-height: auto;" alt="Featured Mars Image">
@@ -40,11 +40,22 @@
 
         <!-- Mars Table -->
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <h2>Mars Facts</h2>
+          <h3>Mars Facts</h3>
           <table>{{mars_facts_table}}</table>
         </div>
+      </div>
+    </div>
 
-    </div>      
-  </div>
+    <!-- Mars Hemispheres -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <p><h2 style="text-align:center">Mars Hemispheres</h2></p>
+          
+        
+        </div>
+      </div>
+
+    </div>
   </div>
 </body>
