--- a/Missions_to_Mars/App/templates/index.html
+++ b/Missions_to_Mars/App/templates/index.html
@@ -24,8 +24,8 @@
       <div class="row">
         <div class="col-md-12">
             <h2>Latest Mars News</h2>
-            <h5>{{news_title}}</h5>
-            <p>{{news_p}}</p>
+            <h5>{{mars_data.news_title}}</h5>
+            <p>{{mars_data.news_p}}</p>
         </div>
       </div>
     </div>
@@ -35,13 +35,13 @@
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12">
           <h2>Featured Mars Image</h2>
-          <img src="{{featured_image_url}}" style="max-width:100%; max-height: auto;" alt="Featured Mars Image">
+          <img src="{{mars_data.featured_image_url}}" style="max-width:100%; max-height: auto;" alt="Featured Mars Image">
         </div>
 
         <!-- Mars Table -->
         <div class="col-lg-4 col-md-4 col-sm-12">
           <h3>Mars Facts</h3>
-          <table>{{mars_facts_table}}</table>
+          <table>{{mars_data.mars_facts_table}}</table>
         </div>
       </div>
     </div>
@@ -51,11 +51,25 @@
       <div class="row">
         <div class="col-md-12">
           <p><h2 style="text-align:center">Mars Hemispheres</h2></p>
-          
-        
+
+          {% for hemisphere in mars_data.hemispheres_image_urls %}
+          <div class = "col-md-6">
+            <div class = "thumbnail">
+              <img src = "{{hemisphere.img_url}}">
+              <h3>{{hemisphere.title}}</h3>
+            </div>
+          </div>
+          {% endfor %}
         </div>
       </div>
-
     </div>
   </div>
+<!-- Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+</html>
+
+
+
