--- a/Missions_to_Mars/App/templates/index.html
+++ b/Missions_to_Mars/App/templates/index.html
@@ -24,8 +24,8 @@
       <div class="row">
         <div class="col-md-12">
             <h2>Latest Mars News</h2>
-            <h5>{{mars_data.news_title}}</h5>
-            <p>{{mars_data.news_p}}</p>
+            <h5>{{mars.news_title}}</h5>
+            <p>{{mars.news_p}}</p>
         </div>
       </div>
     </div>
@@ -35,13 +35,13 @@
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12">
           <h2>Featured Mars Image</h2>
-          <img src="{{mars_data.featured_image_url}}" style="max-width:100%; max-height: auto;" alt="Featured Mars Image">
+          <img src="{{mars.featured_image_url}}" style="max-width:100%; max-height: auto;" alt="Featured Mars Image">
         </div>
 
         <!-- Mars Table -->
         <div class="col-lg-4 col-md-4 col-sm-12">
           <h3>Mars Facts</h3>
-          <table>{{mars_data.mars_facts_table}}</table>
+          <table>{{mars.mars_facts_table}}</table>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
         <div class="col-md-12">
           <p><h2 style="text-align:center">Mars Hemispheres</h2></p>
 
-          {% for hemisphere in mars_data.hemispheres_image_urls %}
+          {% for hemisphere in mars.hemispheres_image_urls %}
           <div class = "col-md-6">
             <div class = "thumbnail">
               <img src = "{{hemisphere.img_url}}">
